--- a/shared/Cargo.toml
+++ b/shared/Cargo.toml
@@ -7,3 +7,4 @@ edition = "2021"
 chrono = { version = "0.4.41", features = ["serde"] }
 serde = { version = "1.0.219", features = ["derive"] }
 sqlx = { version = "0.8.6", features = ["default", "chrono"] }
+dioxus-logger = { workspace = true }
