--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -16,6 +16,7 @@ dioxus = { workspace = true, features = [
     "router",
     "fullstack",
 ] }
+dioxus-logger = { workspace = true }
 shared = { workspace = true }
 # once_cell = "1.21.3"
 tokio = { version = "1.45.1", features = [
