--- a/app/Cargo.toml
+++ b/app/Cargo.toml
@@ -30,6 +30,7 @@ tokio = { version = "1.45.1", features = [
 maplit = "1.0.2"
 dioxus-free-icons = { version = "0.9.0", features = ["lucide"] }
 url = "2.5.4"
+serde_json = { workspace = true }
 
 [features]
 server = ["dioxus/server", "server/db", "tokio"]
