--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -34,7 +34,7 @@ sqlx = { version = "0.8.6", optional = true, features = [
     "chrono",
 ] }
 dioxus-hooks = "0.6.2"
-serde_json = "1.0.140"
+serde_json = { workspace = true }
 chrono = { version = "0.4.41", features = ["default", "serde"] }
 
 [features]
